Atualização com controller alunos

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>academia-digital</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>academia-digital</name>
-	<description>Tutorial API RESTful modelando sistema de academia de ginástica</description>
+	<description>Sistema para empreendimentos de academia com API RESTful</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -52,6 +52,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${project.parent.version}</version>
 				<configuration>
 					<excludes>
 						<exclude>
