--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/shapehaleness_db?useTimezone=true&serverTimezone=UTC&useLegacyData
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
 
