--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/shapehaleness_db?useTimezone=true&serverTimezone=UTC&useLegacyData
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?useTimezone=true&serverTimezone=UTC&useLegacyData
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
